Update: Fixed too long date cards. (#37)
This is done by fixing the date card area to not go more than 50% of the view height. I've also added collapsible buttons to minimize all the sections on the left hand side of the home page.

--- a/tracker/static/main.css
+++ b/tracker/static/main.css
@@ -1,15 +1,20 @@
 .status-Blocked {
-    background-color: #ffcaca;
+  background-color: #ffcaca;
 }
 
 .status-Ongoing {
-    background-color: #fffac1;
+  background-color: #fffac1;
 }
 
 .status-Completed {
-    background-color: #bdffca;
+  background-color: #bdffca;
 }
 
 .status-Dropped {
-    background-color: #d7d7d7;
+  background-color: #d7d7d7;
+}
+
+.date-cards-container {
+  max-height: 50vh;
+  overflow-y: scroll;
 }
